--- a/ap-client/src/styles.scss
+++ b/ap-client/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 .container-fluid, .container{
     min-height:100vh;
+    margin-top: 60px;
 }
