Adding profile page , password matching validators

--- a/ap-client/src/app/header/header.component.html
+++ b/ap-client/src/app/header/header.component.html
@@ -1,14 +1,14 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a  class="navbar" > TEST </a>
-    <div class="col-md-9">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="">GXH Annual Planning</a>
+    <div class="col-md-8">
         <div class="logo">
-            <h5>Dashboard</h5>
+            <h5 class="textcolor">Dashboard</h5>
         </div>
     </div>
     <div class="col-md-2">
         <ul class="nav navbar-nav navbar-right">
             <li class="dropdown" appDropdown>
-                <a style="cursor: pointer;" class="dropdown-toggle" role="button">Hi User<span class="caret"></span></a>
+                <a style="cursor: pointer;" class="dropdown-toggle textcolor" role="button">Hi User<span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a style="cursor: pointer;" (click)="onShowProfile()">Profile</a></li>
                     <li><a style="cursor: pointer;" (click)="onLogout()">Logout</a></li>
