--- a/ap-client/src/app/dashboard/admindashboard/registerdashboard/registerdashboard.component.html
+++ b/ap-client/src/app/dashboard/admindashboard/registerdashboard/registerdashboard.component.html
@@ -1,68 +1,61 @@
-<div class="container">
-  <!-- <div class="row"> -->
-    <form [formGroup]="userRegisterGroup" (ngSubmit)="registerUser()">
+  <form [formGroup]="userRegisterGroup" (ngSubmit)="registerUser()">
 
-      <div class="row">
-        <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-4">
-          <label for="firstname">First Name:</label>
-          <input type="text" formControlName="firstName" class="form-control">
+    <div class="row">
+      <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-4">
+        <label for="firstname">First Name:</label>
+        <input type="text" formControlName="firstName" class="form-control">
+        <span  
+            *ngIf="!userRegisterGroup.get('firstName').valid  
+                && userRegisterGroup.get('firstName').touched"
+                  class="help-block"> Please enter first name</span>
+      </div>
+      <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-4">
+          <label for="lastName">Last Name:</label>
+          <input type="text" formControlName="lastName" class="form-control">
           <span  
-              *ngIf="!userRegisterGroup.get('firstName').valid  
-                  && userRegisterGroup.get('firstName').touched"
-                    class="help-block"> Please enter  first name</span>
+              *ngIf="!userRegisterGroup.get('lastName').valid  
+                  && userRegisterGroup.get('lastName').touched"
+                    class="help-block"> Please enter last name</span>
         </div>
-        <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-4">
-            <label for="lastName">Last Name:</label>
-            <input type="text" formControlName="lastName" class="form-control">
-            <span  
-                *ngIf="!userRegisterGroup.get('lastName').valid  
-                    && userRegisterGroup.get('lastName').touched"
-                      class="help-block"> Please enter last name</span>
-          </div>
-      </div>
+    </div>
 
-      <div class="row">
-        <div class="form-group col-xs-12 col-sm-12 col-md-4 col-lg-4">
-            <label for="email">Email Address:</label>
-            <input type="text" formControlName="email" class="form-control">
-            <span  
-                *ngIf="!userRegisterGroup.get('email').valid  
-                    && userRegisterGroup.get('email').touched"
-                      class="help-block"> Please enter a valid Email Address</span>
-          </div>
-      </div>
-
-      <div class="row">
-        <div class="form-group col-xs-12 col-sm-12 col-md-4 col-lg-4">
-            <label for="contact">Phone Number:</label>
-            <input type="text" formControlName="contact" class="form-control">
-            <span  
-                *ngIf="!userRegisterGroup.get('contact').valid  
-                    && userRegisterGroup.get('contact').touched"
-                      class="help-block"> Please enter valid contact information</span>
-          </div>
-      </div>
-
-      <div class="row">
-          <div class="form-group col-xs-12 col-sm-12 col-md-4 col-lg-4">
-              <label for="role">Role:</label>
-              <li class="dropdown" appDropdown>
-                  <a style="cursor: pointer;" class="dropdown-toggle" role="button">Select a role<span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                      <li><a style="cursor: pointer;" (click)="onShowProfile()">Profile</a></li>
-                      <li><a style="cursor: pointer;" (click)="onLogout()">Logout</a></li>
-                  </ul>
-              </li>
-              <!-- <span  
-                  *ngIf="!userRegisterGroup.get('role').valid  
-                      && userRegisterGroup.get('role').touched"
-                        class="help-block"> Please select a role</span> -->
-            </div>
+    <div class="row">
+      <div class="form-group col-xs-12 col-sm-12 col-md-4 col-lg-4">
+          <label for="email">Email Address:</label>
+          <input type="text" formControlName="email" class="form-control">
+          <span  
+              *ngIf="!userRegisterGroup.get('email').valid  
+                  && userRegisterGroup.get('email').touched"
+                    class="help-block"> Please enter a valid Email Address</span>
         </div>
+    </div>
 
-      <button class="btn btn-primary" type="submit"
-        [disabled]="!userRegisterGroup.valid">Regiter User</button>
+    <div class="row">
+      <div class="form-group col-xs-12 col-sm-12 col-md-4 col-lg-4">
+          <label for="contact">Phone Number:</label>
+          <input type="text" formControlName="contact" class="form-control">
+          <span  
+              *ngIf="!userRegisterGroup.get('contact').valid  
+                  && userRegisterGroup.get('contact').touched"
+                    class="help-block"> Please enter valid contact information</span>
+        </div>
+    </div>
 
-    </form>
-  <!-- </div> -->
-</div>
+    <div class="row">
+        <div class="form-group col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <label for="role">Role:</label>
+            <select name="userRole" formControlName="userRole">
+              <option [ngValue]="null" disabled>Choose your profile</option>
+              <option *ngFor="let role of roles" [ngValue]="role.roleName">{{role.roleName}}</option>
+            </select>
+            <!-- <span  
+                *ngIf="!userRegisterGroup.get('role').valid  
+                    && userRegisterGroup.get('role').touched"
+                      class="help-block"> Please select a role</span> -->
+          </div>
+      </div>
+
+    <button class="btn btn-primary" type="submit"
+      [disabled]="!userRegisterGroup.valid">Regiter User</button>
+
+  </form>
