--- a/ap-client/src/app/header/header.component.html
+++ b/ap-client/src/app/header/header.component.html
@@ -1,19 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="">GXH Annual Planning</a>
-    <div class="col-md-8">
-        <div class="logo">
-            <h5 class="textcolor">Dashboard</h5>
-        </div>
-    </div>
-    <div class="col-md-2">
-        <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown" appDropdown>
-                <a style="cursor: pointer;" class="dropdown-toggle textcolor" role="button">Hi User<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                    <li><a style="cursor: pointer;" (click)="onShowProfile()">Profile</a></li>
-                    <li><a style="cursor: pointer;" (click)="onLogout()">Logout</a></li>
-                </ul>
-            </li>
-        </ul>
-    </div>
+
+    <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
+        <li class="dropdown" appDropdown>
+            <a style="cursor: pointer;" class="dropdown-toggle textcolor" role="button">Hi User<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+                <li><a style="cursor: pointer;" (click)="onShowProfile()">Profile</a></li>
+                <li><a style="cursor: pointer;" (click)="onLogout()">Logout</a></li>
+            </ul>
+        </li>
+    </ul>
+
 </nav>
