--- a/ap-client/src/app/dashboard/admindashboard/registerdashboard/registerdashboard.component.html
+++ b/ap-client/src/app/dashboard/admindashboard/registerdashboard/registerdashboard.component.html
@@ -44,14 +44,15 @@
     <div class="row">
         <div class="form-group col-xs-12 col-sm-12 col-md-4 col-lg-4">
             <label for="role">Role:</label>
+            <br>
             <select name="userRole" formControlName="userRole">
               <option [ngValue]="null" disabled>Choose your profile</option>
-              <option *ngFor="let role of roles" [ngValue]="role.roleName">{{role.roleName}}</option>
+              <option *ngFor="let role of roles" [ngValue]="role.roleId">{{role.roleName}}</option>
             </select>
-            <!-- <span  
-                *ngIf="!userRegisterGroup.get('role').valid  
-                    && userRegisterGroup.get('role').touched"
-                      class="help-block"> Please select a role</span> -->
+            <br>
+            <span *ngIf="!userRegisterGroup.get('userRole').valid  
+                    && userRegisterGroup.get('userRole').touched"
+                      class="help-block"> Please select a role</span>
           </div>
       </div>
 
