--- a/ap-client/src/app/dashboard/admindashboard/registerdashboard/registerdashboard.component.html
+++ b/ap-client/src/app/dashboard/admindashboard/registerdashboard/registerdashboard.component.html
@@ -32,12 +32,12 @@
 
     <div class="row">
       <div class="form-group col-xs-12 col-sm-12 col-md-4 col-lg-4">
-          <label for="contact">Phone Number:</label>
-          <input type="text" formControlName="contact" class="form-control">
+          <label for="phone">Phone Number:</label>
+          <input type="text" formControlName="phone" class="form-control">
           <span  
-              *ngIf="!userRegisterGroup.get('contact').valid  
-                  && userRegisterGroup.get('contact').touched"
-                    class="help-block"> Please enter valid contact information</span>
+              *ngIf="!userRegisterGroup.get('phone').valid  
+                  && userRegisterGroup.get('phone').touched"
+                    class="help-block"> Please enter valid phone number</span>
         </div>
     </div>
 
@@ -45,14 +45,14 @@
         <div class="form-group col-xs-12 col-sm-12 col-md-4 col-lg-4">
             <label for="role">Role:</label>
             <br>
-            <select name="userRole" formControlName="userRole">
+            <select name="userRole" formControlName="roleId">
               <option [ngValue]="null" disabled>Choose your profile</option>
               <!-- Observable data is fetched using async pipe-->
               <option *ngFor="let role of rolesOb" [ngValue]="role.id">{{role.name}}</option>
             </select>
             <br>
-            <span *ngIf="!userRegisterGroup.get('userRole').valid  
-                    && userRegisterGroup.get('userRole').touched"
+            <span *ngIf="!userRegisterGroup.get('roleId').valid  
+                    && userRegisterGroup.get('roleId').touched"
                       class="help-block"> Please select a role</span>
           </div>
       </div>
