--- a/ap-client/src/app/login/login.component.html
+++ b/ap-client/src/app/login/login.component.html
@@ -1,42 +1,43 @@
-<div class="container-fluid">
+<div class="container py-5">
   <div class="row">
-    <div class="col-xs-12 col-sm-8 col-md-6">
-      
-      <div class="card">
+      <div class="col-md-12">
+          <h2 class="text-center text-black mb-4">GXH Annual Planning Tool</h2>
+          <div class="row">
+              <div class="col-md-6 mx-auto">
 
-        <div class="card-header alert-danger">
-          <h5 class="card-title justify-content-center align-items-center">Login</h5>
-        </div>
-
-        <div class="card-body">
-
-          <form [formGroup]="userLoginGroup" (ngSubmit)="onLogin()">
-            
-            <div class="form-group col-xs-12 col-sm-12 col-md-6">
-              <label for="email">Email Address:</label>
-              <input type="email" id="email" formControlName="email" class="form-control" >
-              <span  
-              *ngIf="!userLoginGroup.get('email').valid  && userLoginGroup.get('email').touched"
-              class="help-block"> Please enter a valid username</span>
-            </div>
-
-            <div class="form-group col-xs-12 col-sm-12 col-md-6">
-                <label for="password">Password:</label>
-                <input type="password" id="password" formControlName="password" class="form-control" >
-                <span  
-                *ngIf="!userLoginGroup.get('password').valid  && userLoginGroup.get('password').touched"
-                class="help-block"> Please enter a valid password</span>
-            </div>
-
-            <button class="btn btn-primary" type="submit"
-              [disabled]="!userLoginGroup.valid">Sign In</button>
-
-          </form>
-
-        </div>
-
+                  <!-- form card login -->
+                  <div class="card rounded-0">
+                      <div class="card-header">
+                          <h3 class="mb-0">Login</h3>
+                      </div>
+                      <div class="card-body">
+                        <form [formGroup]="userLoginGroup" (ngSubmit)="onLogin()">
+                              <div class="form-group">
+                                <label for="email">Email Address:</label>
+                                <input type="email" id="email" formControlName="email" class="form-control" >
+                                <span  
+                                *ngIf="!userLoginGroup.get('email').valid  && userLoginGroup.get('email').touched"
+                                class="help-block"> Please enter a valid username</span>
+                              </div>
+                              <div class="form-group">
+                                <label for="password">Password:</label>
+                                <input type="password" id="password" formControlName="password" class="form-control" >
+                                <span  
+                                *ngIf="!userLoginGroup.get('password').valid  && userLoginGroup.get('password').touched"
+                                class="help-block"> Please enter a valid password</span>
+                              </div>
+                              <button type="submit" class="btn btn-success btn-lg float-right" [disabled]="!userLoginGroup.valid">Login</button>
+                          </form>
+                      </div>
+                      <!--/card-block-->
+                  </div>
+                  <!-- /form card login -->
+              </div>
+          </div>
+          <!--/row-->
       </div>
-
-    </div>
+      <!--/col-->
   </div>
+  <!--/row-->
 </div>
+<!--/container-->
