--- a/ap-client/src/app/profile/profile.component.html
+++ b/ap-client/src/app/profile/profile.component.html
@@ -19,7 +19,7 @@
         <span  
             *ngIf="!userProfileGroup.get('oldPassword').valid  
                 && userProfileGroup.get('oldPassword').touched"
-                  class="help-block"> Current password does not match</span>
+                  class="alert-danger"> Current password does not match</span>
       </div>
     </div>
 
@@ -30,7 +30,7 @@
         <span  
             *ngIf="!userProfileGroup.get('newPassword').valid  
                 && userProfileGroup.get('newPassword').touched"
-                  class="help-block"> Please enter a valid password</span>
+                  class="alert-danger"> Please enter a valid password</span>
       </div>
     </div>
 
@@ -39,7 +39,7 @@
         <label for="confirmPwd">Confirm Password:</label>
         <input type="password" formControlName="confirmPwd" class="form-control">
         <span *ngIf="userProfileGroup.hasError('validConfirmPassword') 
-          && userProfileGroup.get('confirmPwd').touched" class="help-block">Passwords do not match</span>
+          && userProfileGroup.get('confirmPwd').touched" class="alert-danger">Passwords do not match</span>
       </div>
     </div>
 
@@ -54,7 +54,7 @@
         <span  
             *ngIf="!userProfileGroup.get('firstName').valid  
                 && userProfileGroup.get('firstName').touched"
-                  class="help-block"> Please enter first name</span>
+                  class="alert-danger"> Please enter first name</span>
       </div>
       <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-4">
         <label for="lastName">Last Name:</label>
@@ -62,7 +62,7 @@
         <span  
             *ngIf="!userProfileGroup.get('lastName').valid  
                 && userProfileGroup.get('lastName').touched"
-                  class="help-block"> Please enter last name</span>
+                  class="alert-danger"> Please enter last name</span>
       </div>
     </div>
 
@@ -73,7 +73,7 @@
         <span  
             *ngIf="!userProfileGroup.get('contact').valid  
                 && userProfileGroup.get('contact').touched"
-                  class="help-block"> Please enter first name</span>
+                  class="alert-danger"> Please enter first name</span>
       </div>
     </div>
 
