Profile service initial commit

--- a/ap-client/src/app/profile/profile.component.html
+++ b/ap-client/src/app/profile/profile.component.html
@@ -5,7 +5,7 @@
     </div>
 </div>
 
-<form [formGroup]="userProfileGroup">
+<form [formGroup]="userProfileGroup" (ngSubmit)="onProfileSubmit()">
 
     <div>
       <span class="bolderText">Change Password</span>
