smart table added

--- a/ap-client/src/app/supplier/supplier.component.html
+++ b/ap-client/src/app/supplier/supplier.component.html
@@ -1,3 +1,5 @@
-<p>
-  supplier works!
-</p>
+<div class="container py-5">
+    <ng2-smart-table [settings]="settings" [source]="data"></ng2-smart-table>
+</div>
+
+
