--- a/ap-client/src/app/profile/profile.component.html
+++ b/ap-client/src/app/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-4">
       <label for="email">Email Address:</label>
-      <input type="text" class="form-control" value="abc@xyz.com" disabled>
+      <input type="text" class="form-control" value="{{userEmailAddress}}" disabled>
     </div>
 </div>
 
@@ -19,7 +19,7 @@
         <span  
             *ngIf="!userProfileGroup.get('oldPassword').valid  
                 && userProfileGroup.get('oldPassword').touched"
-                  class="alert-danger"> Current password does not match</span>
+                  class="alert-danger"> Current Password is required</span>
       </div>
     </div>
 
@@ -27,10 +27,10 @@
       <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-4">
         <label for="newPassword">New Password:</label>
         <input type="password" formControlName="newPassword" class="form-control">
-        <span  
-            *ngIf="!userProfileGroup.get('newPassword').valid  
-                && userProfileGroup.get('newPassword').touched"
-                  class="alert-danger"> Please enter a valid password</span>
+        <span class="alert-danger" *ngIf="!userProfileGroup.get('newPassword').valid 
+            && userProfileGroup.get('confirmPwd').touched && userProfileGroup.hasError('newPasswordNeeded')">
+          Please enter a valid password to update
+        </span>
       </div>
     </div>
 
@@ -73,14 +73,18 @@
         <span  
             *ngIf="!userProfileGroup.get('contact').valid  
                 && userProfileGroup.get('contact').touched"
-                  class="alert-danger"> Please enter first name</span>
+                  class="alert-danger"> Please enter valid phone number</span>
       </div>
     </div>
 
     <button class="btn btn-primary" type="submit"
     [disabled]="!userProfileGroup.valid">Save Profile</button>
 
-    <button  class="btn btn-danger" type="reset" (click)="resetChanges()">Cancel</button>
+</form>
 
-  </form>
+<div class="form-group marginEdit">
+  <button  class="btn btn-danger" type="reset" (click)="resetChanges()">Cancel</button>
+</div>
+
+
 
