smart table customised for supplier

--- a/ap-client/src/app/supplier/supplier.component.html
+++ b/ap-client/src/app/supplier/supplier.component.html
@@ -1,5 +1,6 @@
 <div class="container py-5">
-    <ng2-smart-table [settings]="settings" [source]="data"></ng2-smart-table>
+    <ng2-smart-table [settings]="settings" [source]="data" (editConfirm)="onEdit($event)"></ng2-smart-table>
+    <button (click)="myEvent($event)">Confirm</button>
 </div>
 
 
