--- a/ap-client/src/app/supplier/supplier.component.html
+++ b/ap-client/src/app/supplier/supplier.component.html
@@ -1,33 +1,45 @@
-<div>
-    <ngx-datatable
-      [rows]="rows"
-      [columns]="columns"
-      [selectionType]="'cell'"
-      (select)="onSelect($event)"
-      (activate)="onActivate($event)">
-  
-      <!-- Need to check this code , to enable editing -->
-    <div *ngFor="let column of columns; let i = index">
-      <ngx-datatable-column name="{{column.name}}">
-        <ng-template ngx-datatable-cell-template let-rowIndex="i" let-value="value" let-row="row">
-          <span
-            title="Double click to edit"
-            (dblclick)="editing[i + '-name'] = true"
-            *ngIf="!editing[i + '-name']">
-            {{value}}
-          </span>
-          <input
-            autofocus
-            (blur)="updateValue($event, 'name', i)"
-            *ngIf="editing[i+ '-name']"
-            type="text"
-            [value]="value"
-          />
-        </ng-template>
-      </ngx-datatable-column>
+ <div class="container">
+    <div class="table-responsive">
+        <table class="table table-sm">
+            <thead>
+              <tr>
+                <th scope="col">Package</th>
+                <th scope="col">Code</th>
+                <th scope="col">Rate</th>
+                <th scope="col">DM1</th>
+                <th scope="col">DM2</th>
+                <th scope="col">DM3</th>
+                <th scope="col">DM4</th>
+                <th scope="col">DM5</th>
+                <th scope="col">DM6</th>
+                <th scope="col">DM7</th>
+                <th scope="col">DM8</th>
+                <th scope="col">DM9</th>
+                <th scope="col">DM10</th>
+                <th scope="col">DM11</th>
+                <th scope="col">DM12</th>
+                <th scope="col">DM13</th>
+                <th scope="col">Action</th>
+              </tr>
+            </thead>
+            
+            <tbody>
+              <tr *ngFor="let row of rows">
+                <td><input type="text" [(ngModel)]="row.pname" [readonly]="true" /></td>
+                <td><input type="text" [(ngModel)]="row.pcode" [readonly]=true /></td>
+                <td><input type="text" [(ngModel)]="row.prate" [readonly]="true" /></td>
+                <td *ngFor="let dm of row.dualmailers;let i = index">
+                  <input *ngIf="row.isEditable" type="text" [(ngModel)]="dm.value" [readonly]="row.isEditable" (dblclick)="editDM(i)"/>
+                </td>
+                <td>
+                  <button class="btn btn-primary btn-sm" (click)="row.isEditable=!row.isEditable" *ngIf="row.isEditable">Edit</button>
+                  <button class="btn btn-primary btn-sm" *ngIf="!row.isEditable" (click)="row.isEditable=!row.isEditable">Save</button>
+                </td>
+              </tr>
+            </tbody>
+         </table>
     </div>
-  
-    </ngx-datatable>
-  </div>
-  
 
+    <button type="button" class="btn btn-success" (click)="saveTable($event)">Save</button>
+
+ </div>
