--- a/ap-client/src/app/supplier/supplier.component.html
+++ b/ap-client/src/app/supplier/supplier.component.html
@@ -1,4 +1,4 @@
- <div class="container">
+<div class="container">
     <div class="table-responsive">
         <table class="table table-sm">
             <thead>
@@ -25,11 +25,14 @@
             
             <tbody>
               <tr *ngFor="let row of rows">
-                <td><input type="text" [(ngModel)]="row.pname" [readonly]="true" /></td>
-                <td><input type="text" [(ngModel)]="row.pcode" [readonly]=true /></td>
-                <td><input type="text" [(ngModel)]="row.prate" [readonly]="true" /></td>
+
+                <td><p>{{row.pname}}</p></td>
+                <td><p>{{row.pcode}}</p></td>
+                <td><p>{{row.prate}}$</p></td>
+
                 <td *ngFor="let dm of row.dualmailers;let i = index">
-                  <input *ngIf="row.isEditable" type="text" [(ngModel)]="dm.value" [readonly]="row.isEditable" (dblclick)="editDM(i)"/>
+                  <input *ngIf="!row.isEditable" type="text" [(ngModel)]="dm.value" [readonly]="row.isEditable"/>
+                  <p *ngIf="row.isEditable" (dblclick)="editDM(i)">{{dm.value}}</p>
                 </td>
                 <td>
                   <button class="btn btn-primary btn-sm" (click)="row.isEditable=!row.isEditable" *ngIf="row.isEditable">Edit</button>
