Showing combobox only after login, adding home component changes, closing dropdown on mouse leave event

--- a/ap-client/src/app/home/home.component.html
+++ b/ap-client/src/app/home/home.component.html
@@ -3,17 +3,17 @@
     <div class="card-body">
         <h5>My Dashboard</h5>
       <!-- Image components -->
-      <div class="row">
+      <div class="row col-lg-12">
 
-        <span class="column">
+        <span class="column col-lg-3">
           <img src="../../assets/images/pieChart.png" alt="pie-chart">
           <figcaption class="imgCaption"><a  [routerLink]="['/supplier']">Active Promotion</a></figcaption>
         </span>
-        <span  class="column">
+        <span  class="column col-lg-3">
           <img src="../../assets/images/barChart.png" alt="bar-chart">
           <figcaption class="imgCaption">Budget vs Actual</figcaption>
         </span>
-        <span  class="column">
+        <span  class="column col-lg-3">
           <img src="../../assets/images/calendar.png" alt="calendar" class="imgWithDropdown">
           <figcaption class="dropdownCaption">
               <select name="" id="">
@@ -23,7 +23,7 @@
               </select>
           </figcaption>
         </span>
-        <span  class="column">
+        <span  class="column col-lg-3">
           <img src="../../assets/images/tags.png" alt="tags" class="imgWithDropdown">
           <figcaption class="dropdownCaption">
               <select name="" id="">
@@ -40,7 +40,7 @@
       <h5> Inbox</h5>
       <div class="row">
         <table>
-          
+
         </table>
       </div>
       <div class="row">
