--- a/ap-client/src/app/home/home.component.scss
+++ b/ap-client/src/app/home/home.component.scss
@@ -34,3 +34,14 @@
         width: 100%;
     }
 }
+
+table {
+    th, tr{
+        border: 1px solid #dee2e6;
+    }
+}
+
+nouislider {
+    width: 50%;
+    padding-left: 30px;
+}
