--- a/ap-client/src/app/app.component.html
+++ b/ap-client/src/app/app.component.html
@@ -2,3 +2,8 @@
 <app-header></app-header>
 <!-- Page Content -->
 <router-outlet></router-outlet>
+
+
+<!-- Modal -->
+<div id="modalContainer" class="hidden"></div>
+<div id="overlay" class="hidden overlay" ></div>
