--- a/ap-client/src/app/supplier/supplier.component.html
+++ b/ap-client/src/app/supplier/supplier.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+  <button class="btn btn-primary" (click)="clickMe()">
+    click here for modal..
+  </button>
     <div class="table-responsive">
         <table class="table table-sm">
             <thead>
