--- a/ap-client/src/styles.scss
+++ b/ap-client/src/styles.scss
@@ -1,5 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-.container-fluid, .container{
+.container-fluid {
     min-height:100vh;
+    margin-top: 60px;
+}
+
+.container {
     margin-top: 60px;
 }
