--- a/ap-client/src/app/manager/manager.component.html
+++ b/ap-client/src/app/manager/manager.component.html
@@ -1,3 +1,51 @@
-<p>
-    this is manager
-</p>
+<div class="container">
+    
+    <div class="d-flex flex-row-reverse">
+          <div class="p-2">
+            <button type="button" class="btn btn-success" (click)="acceptPromotion()">Accept</button>
+          </div>
+          <div class="p-2">
+            <button type="button" class="btn btn-success" (click)="rejectPromotion()">Reject</button>
+          </div>
+    </div>
+  
+    <div class="table-responsive">
+          <table class="table table-sm">
+              <thead>
+                <tr>
+                  <th scope="col">Package</th>
+                  <th scope="col">Code</th>
+                  <th scope="col">Rate</th>
+                  <th scope="col">DM1</th>
+                  <th scope="col">DM2</th>
+                  <th scope="col">DM3</th>
+                  <th scope="col">DM4</th>
+                  <th scope="col">DM5</th>
+                  <th scope="col">DM6</th>
+                  <th scope="col">DM7</th>
+                  <th scope="col">DM8</th>
+                  <th scope="col">DM9</th>
+                  <th scope="col">DM10</th>
+                  <th scope="col">DM11</th>
+                  <th scope="col">DM12</th>
+                  <th scope="col">DM13</th>
+                </tr>
+              </thead>
+              
+              <tbody>
+                <tr *ngFor="let row of promotion.ratecards; let rowid = index">
+  
+                  <td><p>{{row.pname}}</p></td>
+                  <td><p>{{row.pcode}}</p></td>
+                  <td><p>{{row.prate}}$</p></td>
+  
+                  <td *ngFor="let dm of row.dualmailers; let i = index">
+                    <p>{{dm.value}}</p>
+                  </td>
+                </tr>
+              </tbody>
+           </table>
+    </div>
+  
+   </div>
+  
