--- a/ap-client/src/app/modal/product-selection-modal/product-selection-modal.component.html
+++ b/ap-client/src/app/modal/product-selection-modal/product-selection-modal.component.html
@@ -7,7 +7,7 @@
   </div>
 
   <div class="input-group mb-3" *ngIf = "model.productSelect === 'single'">
-    <div class="form-check-inline col-lg-3" *ngFor='let product of promotionalProduct'>
+    <div class="form-check-inline col-lg-5" *ngFor='let product of promotionalProduct'>
       <label class="form-check-label">
         <input type="checkbox" class="form-check-input" value="product.sku"> {{product.name}}
       </label>
@@ -21,4 +21,13 @@
         name="productSelect">Brand Product
     </label>
   </div>
+
+  <div class="input-group mb-3" *ngIf = "model.productSelect === 'brand'">
+    <div class="form-check-inline col-lg-5" *ngFor='let product of promotionalProduct'>
+      <label class="form-check-label">
+        <input type="checkbox" class="form-check-input" value="product.sku" disabled checked> {{product.name}}
+      </label>
+    </div>
+  </div>
+
 </div>
