--- a/ap-client/src/app/manager/manager.component.html
+++ b/ap-client/src/app/manager/manager.component.html
@@ -5,7 +5,7 @@
             <button type="button" class="btn btn-success" (click)="acceptPromotion()">Accept</button>
           </div>
           <div class="p-2">
-            <button type="button" class="btn btn-success" (click)="rejectPromotion()">Reject</button>
+            <button type="button" class="btn btn-danger" (click)="rejectPromotion()">Reject</button>
           </div>
     </div>
   
