--- a/ap-client/src/app/modal/product-selection-modal/product-selection-modal.component.html
+++ b/ap-client/src/app/modal/product-selection-modal/product-selection-modal.component.html
@@ -7,9 +7,10 @@
   </div>
 
   <div class="input-group mb-3" *ngIf = "model.productSelect === 'single'">
-    <div class="form-check-inline col-lg-5" *ngFor='let product of promotionalProduct'>
+    <div class="form-check-inline col-lg-5" *ngFor='let product of promotionalProducts'>
       <label class="form-check-label">
-        <input type="checkbox" class="form-check-input" value="product.sku"> {{product.name}}
+        <input type="checkbox" class="form-check-input" name="promotionalProducts" 
+          value="product.sku" (change)="test($event)"> {{product.name}}
       </label>
     </div>
   </div>
@@ -23,9 +24,10 @@
   </div>
 
   <div class="input-group mb-3" *ngIf = "model.productSelect === 'brand'">
-    <div class="form-check-inline col-lg-5" *ngFor='let product of promotionalProduct'>
+    <div class="form-check-inline col-lg-5" *ngFor='let product of promotionalProducts'>
       <label class="form-check-label">
-        <input type="checkbox" class="form-check-input" value="product.sku" disabled checked> {{product.name}}
+        <input type="checkbox" class="form-check-input" name="promotionalProducts" 
+          value="product.sku" disabled checked> {{product.name}}
       </label>
     </div>
   </div>
