--- a/ap-client/src/app/app.component.scss
+++ b/ap-client/src/app/app.component.scss
@@ -29,24 +29,6 @@ body {
     display:block;
 }
 
-#modalContainer {
-    position:  absolute;
-    top: 150px;
-    left: 40%;
-    width: 50%;
-    background: white;
-    margin-left: -187.5px;
-    text-align: center;
-    box-shadow: 0px 0px 2px 1px black;
-    z-index: 100;
-}
-
-#overlay {
-    position: absolute;
-    top: 0px;
-    left:  0px;
-    z-index:  99;
-    background:  rgba(0,0,0,0.8);
-    width:  100%;
-    height: 100%;
+div.modal-dialog {
+  margin: 0.5rem !important;
 }
