--- a/ap-client/src/app/modal/product-selection-modal/product-selection-modal.component.html
+++ b/ap-client/src/app/modal/product-selection-modal/product-selection-modal.component.html
@@ -1,35 +1,32 @@
 <div class="modal-body">
-  <div class="input-group mb-3">
-    <label for="single">
-      <input type="radio" aria-label="Checkbox for following text input" 
-        value="single" name="productSelect"  [(ngModel)]="model.productSelect" >Single Product
-    </label>
-  </div>
 
-  <div class="input-group mb-3" *ngIf = "model.productSelect === 'single'">
-    <div class="form-check-inline col-lg-5" *ngFor='let product of promotionalProducts'>
-      <label class="form-check-label">
-        <input type="checkbox" class="form-check-input" name="promotionalProducts" 
-          value="product.sku" (change)="test($event)"> {{product.name}}
+  <div>
+    <!-- Options to select the brand of product.  -->
+    <div class="row">
+      <label>
+          Please select the brand from the dropdown: 
       </label>
+      <span>
+        <select name="brandDropdown" (change)="onValueChange($event)">
+          <option *ngFor="let brand of brandKeys" [ngValue]="brand" >{{brand}}</option>
+        </select>
+      </span>
     </div>
-  </div>
 
-  <div class="input-group">
-    <label for="single">
-      <input type="radio" aria-label="Checkbox for following text input" 
-        value="brand" [(ngModel)]="model.productSelect" 
-        name="productSelect">Brand Product
-    </label>
-  </div>
+    <br/>
 
-  <div class="input-group mb-3" *ngIf = "model.productSelect === 'brand'">
-    <div class="form-check-inline col-lg-5" *ngFor='let product of promotionalProducts'>
-      <label class="form-check-label">
-        <input type="checkbox" class="form-check-input" name="promotionalProducts" 
-          value="product.sku" disabled checked> {{product.name}}
-      </label>
+    <!-- Products that can be selected by the supplier. -->
+    <div class="row showScroll">
+      <div class="col-lg-12">
+        <div class="form-check-inline col-lg-5" *ngFor='let product of productArray'>
+          <label class="form-check-label">
+            <input type="checkbox" class="form-check-input" name="promotionalProducts" 
+              value="product.sku" > {{ product.name }}
+          </label>
+        </div>
+      </div>
     </div>
+
   </div>
 
 </div>
