supplier comp updated for modal

--- a/ap-client/src/app/modal/promotion-reject-modal/promotion-reject-modal.component.html
+++ b/ap-client/src/app/modal/promotion-reject-modal/promotion-reject-modal.component.html
@@ -1,6 +1,8 @@
-<form>
-  <div class="form-group">
-    <label for="formGroupExampleInput">Comments:</label>
-    <textarea class="form-control" rows="5" id="comment"></textarea>
+<div>
+
+  <div class="d-flex flex-column">
+    <div class="p-2 bd-highlight">Comment:</div>
+    <div class="p-2 bd-highlight"><textarea id="comment" [(ngModel)]="promoComment.comment"></textarea></div> 
   </div>
-</form>
+  
+</div>
