Selection for promotion and selecting products. Removing unused imports

--- a/ap-client/src/app/modal/product-selection-modal/product-selection-modal.component.html
+++ b/ap-client/src/app/modal/product-selection-modal/product-selection-modal.component.html
@@ -20,8 +20,8 @@
       <div class="col-lg-12">
         <div class="form-check-inline col-lg-5" *ngFor='let product of productArray'>
           <label class="form-check-label">
-            <input type="checkbox" class="form-check-input" name="promotionalProducts" 
-              value="product.sku" > {{ product.name }}
+            <input type="checkbox" class="form-check-input" name="promotionalProducts" id="product.id"
+              value="product.sku" (change)="onProductSelection($event, product)"> {{ product.name }}
           </label>
         </div>
       </div>
