--- a/ap-client/src/app/modal/product-selection-modal/product-selection-modal.component.html
+++ b/ap-client/src/app/modal/product-selection-modal/product-selection-modal.component.html
@@ -8,7 +8,7 @@
       </label>
       <span>
         <select name="brandDropdown" (change)="onValueChange($event)">
-          <option *ngFor="let brand of brandKeys" [ngValue]="brand" >{{brand}}</option>
+          <option *ngFor="let brand of productArray" [ngValue]="brand.name" >{{brand.name}}</option>
         </select>
       </span>
     </div>
@@ -18,7 +18,7 @@
     <!-- Products that can be selected by the supplier. -->
     <div class="row showScroll">
       <div class="col-lg-12">
-        <div class="form-check-inline col-lg-5" *ngFor='let product of productArray'>
+        <div class="form-check-inline col-lg-5" *ngFor='let product of product_skus'>
           <label class="form-check-label">
             <input type="checkbox" class="form-check-input" name="promotionalProducts" id="product.id"
               value="product.sku" (change)="onProductSelection($event, product)"> {{ product.name }}
