show selected products based on promo_count, fix for JSON message change

--- a/ap-client/src/app/modal/product-selection-modal/product-selection-modal.component.html
+++ b/ap-client/src/app/modal/product-selection-modal/product-selection-modal.component.html
@@ -8,7 +8,7 @@
       </label>
       <span>
         <select name="brandDropdown" (change)="onValueChange($event)">
-          <option *ngFor="let brand of productArray" [ngValue]="brand.name" >{{brand.name}}</option>
+          <option *ngFor="let brand of productArray" [ngValue]="brand.brand_name" >{{brand.brand_name}}</option>
         </select>
       </span>
     </div>
